tests/compile-fail/integration__integration__ecl_features__olde_unsupported_return_type.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: return types are not supported in old-style ECL subs like 'bouba'
  ┌─ <input>:8:1
  │
8 │ int bouba() {
  │ ^^^ unsupported return type


